--- a/list.html
+++ b/list.html
@@ -36,7 +36,7 @@
     <header>
       <div class="overlay"></div>
       <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="anime_amv.mp4" type="video/mp4">
+        <source src="" type="video/mp4">
       </video>
       <div class="container h-100">
         <div class="d-flex h-100 text-center align-items-center">
