--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                     <a class="nav-item nav-link" href="manga.html">Manga</a> 
                     <a class="nav-item nav-link" href="genre.html">Genre</a> 
                     <a class="nav-item nav-link" href="upcoming.html">Upcoming</a>                  
-                    <a class="nav-item nav-link active" href="list.html">My Anime List</a> 
+                    <a class="nav-item nav-link" href="list.html">My Anime List</a> 
                     <a class="nav-item nav-link active" href="about.html">About</a> 
                 </div>
             </div>
