--- a/genre.html
+++ b/genre.html
@@ -26,8 +26,8 @@
                     <a class="nav-item nav-link" href="seasons.html">Seasons</a> 
                     <a class="nav-item nav-link" href="manga.html">Manga</a> 
                     <a class="nav-item nav-link active" href="genre.html">Genre</a> 
-                    <a class="nav-item nav-link" href="upcoming.html">Upcoming</a>                  
-                    <a class="nav-item nav-link active" href="list.html">My Anime List</a> 
+                    <a class="nav-item nav-link" href="upcoming.html">Upcoming</a>                 
+                    <a class="nav-item nav-link" href="list.html">My Anime List</a> 
                     <a class="nav-item nav-link" href="about.html">About</a> 
                 </div>
             </div>
