--- a/upcoming.html
+++ b/upcoming.html
@@ -25,8 +25,8 @@
                     <a class="nav-item nav-link" href="seasons.html">Seasons</a> 
                     <a class="nav-item nav-link" href="manga.html">Manga</a> 
                     <a class="nav-item nav-link" href="genre.html">Genre</a> 
-                    <a class="nav-item nav-link active" href="upcoming.html">Upcoming</a>                  
-                    <a class="nav-item nav-link active" href="list.html">My Anime List</a> 
+                    <a class="nav-item nav-link active" href="upcoming.html">Upcoming</a>          
+                    <a class="nav-item nav-link" href="list.html">My Anime List</a> 
                     <a class="nav-item nav-link" href="about.html">About</a> 
                 </div>
             </div>
