--- a/list.html
+++ b/list.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <div id="list" class="container bg-dark mt-5 mb-5 text-white pt-5 pb-5 pr-2 pl-2">
+    <div id="list" class="container bg-dark mt-5 mb-5 text-white pt-5 pb-5">
         <div class="col" id="my-list">
             <div>
                 <h3 class="mb-4">Daftar Anime</h3>
